# fused_sample_ops

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test.py
fused_grid_ops/: sample_sum_fused.py
fused_grid_sum/: __init__.py  grid_sample_dot.py  grid_sample_dot_torch.py  sample_dot.py  sample_dot_fused.py  sample_dot_torch.py  sample_sum.py  sample_sum_fused.py  sample_sum_torch.py
fused_sample_ops/: __init__.py  sample_dot_fused.py  sample_sum_fused.py  sample_sum_torch.py
src/: common.cuh  conversions.cuh  extension.cpp  extension.cu  fused_grid_sum.cu  fused_grid_sum.cuh  glm_adapter.cuh  grid_sample_dot.cu  grid_sample_dot.cuh  lines.cu  lines.cuh  points.cu  points.cuh  sample_dot.cu  sample_dot.cuh  sample_sum.cu  sample_sum.cuh
tests/: common.py  fused_grid_sum_torch.py  test_backward_image_grad.py  test_backward_weight_grad.py  test_forward.py
torchdraw_cuda/: __init__.py
